Added explicit configuration metadata abstraction to consolidate logic around attribute identification.